powernap (2.17) unreleased; urgency=low

  [ Bryce Harrington ]
  * actions/{service,kernel_module}: Add scripts to handle services and
    kernel modules on powersave mode.

  [ Andres Rodriguez ]
  * Re-organize source to differ between pm-utils actions and powernap
    actions.
    - debian/powernap-common.install: Update.
    - powernap.spec: Update.
  * Add SERVICES and MODULES initial support:
    - powernap/powernap.py: Load from config.
  * actions/pm/01cpu_online: Disable by default.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Wed, 30 Nov 2011 09:51:56 -0500

powernap (2.16-0ubuntu1) precise; urgency=low

  [ Andres Rodriguez ]
  * debian/control: Move python-scapy Depends to Suggests.
  * Do not use awk to parse output. (LP: #879591)
    - bin/powerwake
    - powerwake/powerwake.py

  [ Eric Sandeen ]
  * powernap.spec: cleaned up a bit for better building/installation on RH
    systems

  [ Remi Druilhe ]
  * Dynamically reload configuration file (LP: #887680)

 -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 29 Nov 2011 14:42:41 -0500

powernap (2.15-0ubuntu1) oneiric; urgency=low

  * actions/eth_speed: Disable by default to not experience connectivity
    loss on certain network configs. (LP: #730210)

 -- Andres Rodriguez <andreserl@ubuntu.com>  Fri, 09 Sep 2011 15:32:30 -0400

powernap (2.14-0ubuntu1) oneiric; urgency=low

  * bin/powerwake:
    - fix the powerake mac caching methodology, which was somewhat broken

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 22 Aug 2011 00:38:17 -0500

powernap (2.13-0ubuntu1) oneiric; urgency=low

  [ Dustin Kirkland ]
  * sbin/powernapd:
    - make sure that powerwake-now works, even if a system has gone into
      powersave mode by other means (erhm, gnome-power-settings, erhm)
  * actions/01cpu_online:
    - drop the nasty sleep 10 hack around gnome-settings-daemon bugginess;
      doesn't seem to be a problem at this point in Oneiric;  If this bug
      shows back up, we need to solve it in a better way