@@ -9,11 +9,13 @@ powernap (2.17) unreleased; urgency=low
     actions.
     - debian/powernap-common.install: Update.
     - powernap.spec: Update.
-  * Add SERVICES and MODULES initial support:
+  * Disable SERVICES and KERN_MODULES on PowerSave mode (LP: #887684):
     - powernap/powernap.py: Load from config.
+    - debian/powernap-common.install: Install new scripts.
+    - Add take powersave action and its recover equivalent.
   * actions/pm/01cpu_online: Disable by default.
 
- -- Andres Rodriguez <andreserl@ubuntu.com>  Wed, 30 Nov 2011 09:51:56 -0500
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Thu, 01 Dec 2011 12:07:41 -0500
 
 powernap (2.16-0ubuntu1) precise; urgency=low
 
